--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,63 @@ body{
     
     }
 
+
+.block {
+
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 10px;
+    word-wrap: break-word;
+
+}
+
+.picture {
+
+    border: 3px, solid, black;
+    display: flex;
+    align-self: center;
+    margin: 30px;   
+   
+}
+
+.image_left{
+
+    margin: 20px;
+}
+
+.image_right{
+
+    margin: 20px;
+}
+
+.text_center{
+
+    margin: 30px;
+margin
+}
+.text_right{
+
+    word-wrap: break-word;
+    order: 1;
+    padding-right: 5px;
+    text-align: left;
+}
+
+.text_left {
+
+    padding-left: 5x;
+    text-align: right;
+}
+
 .navbar{
+    order: 1  ;
     background-color: black;
     color: white;
     border-radius: 30px;
     margin: 10px;
     border: 10px;
+    min-width: 30%;
     position: sticky;
     top: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -40,9 +91,22 @@ body{
     margin-left: 5%;   
 }
 
+.menu_link{
+
+    color: white;
+    text-decoration: none;
+}
+
+.menu_link:hover{
+
+    color: cadetblue;
+}
+
+
 .sidebar{
 
     width:200px;
+    min-width: 150px;
     height:500px;
     margin:18px;
     float: left;
@@ -75,7 +139,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color: steelblue;
-    position: fixed;
+    position: relative;
     bottom: 0px;
     width: 100%;
     height: 80px;
@@ -106,5 +170,13 @@ body{
     position: static;
     padding-right: 10px;
     padding-bottom: 10px;
+
+}
+
+
+
+p {
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+padding: 7px;
 
 }
