--- a/css/main.css
+++ b/css/main.css
@@ -11,20 +11,25 @@ body{
     
     }
 
+h2 {
+
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 
 .block {
 
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin: 10px;
+  
     word-wrap: break-word;
 
 }
 
 .picture {
 
-    border: 3px, solid, black;
+   
     display: flex;
     align-self: center;
     margin: 30px;   
@@ -33,18 +38,31 @@ body{
 
 .image_left{
 
-    margin: 20px;
+    
+    margin-left: 20px;
+    
+
 }
 
 .image_right{
 
     margin: 20px;
+ 
+}
+
+.image_center{
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+   
 }
 
 .text_center{
 
     margin: 30px;
-margin
+
 }
 .text_right{
 
@@ -140,6 +158,7 @@ margin
     align-items: center;
     background-color: steelblue;
     position: relative;
+    float: bottom;
     bottom: 0px;
     width: 100%;
     height: 80px;
