--- a/css/studio.css
+++ b/css/studio.css
@@ -17,3 +17,9 @@ Final Project for CSCI 115 */
 
 }
 
+.gear_list {
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 7px;
+}
+
