--- a/css/studio.css
+++ b/css/studio.css
@@ -3,10 +3,14 @@ Final Project for CSCI 115 */
 
 #studio1{
 
+    width: 50%;
+    margin: 5%;
+}
+
+#studio2{
     
     width: 50%;
     margin: 5%;
-   
 }
 
 #studio2{
