--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ h2 {
 
 .text_center{
 
-    margin: 30px;
+    text-align: center;
+    margin: 10px;
 
 }
 .text_right{
@@ -233,10 +234,45 @@ a {
  a:hover{
  
     color: crimson;
- 
  }
 
  /* lh {
 
     color: cadetblue;
  } */
+
+ .whitespace {
+
+    width: 100%;
+    height: 500px;
+ }
+
+ #contact_button {
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+
+    background-color: black;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
+    border-radius: 10px;
+}
+
+.contact_block {
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.contact_block a {
+
+    color: white;
+}
+
