--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ h2 {
 .block {
 
     display: flex;  
-    float: center;
+
   
     margin-left: 250px;
 
@@ -80,7 +80,7 @@ h2 {
 
 .text_left {
 
-    padding-left: 5x;
+    padding-left: 5px;
     text-align: right;
 }
 
@@ -106,7 +106,7 @@ h2 {
     float: left;
     list-style: none;
     margin: 15px 20px;
-    padding: 10px, 50px;
+    padding: 10px;
 }
 
 #navimg{
@@ -168,7 +168,7 @@ h2 {
     /* align-items: center; */
     background-color: steelblue;
     position: relative;
-    float: bottom;
+
     bottom: 0px;
     width: 100%;
     height: 80px;
@@ -189,7 +189,7 @@ h2 {
     align-self: center;
     justify-self: center;
     float: left;
-    padding: 30px, 5px;
+    padding: 30px;
 }
 
 #footer_right{
@@ -199,7 +199,7 @@ h2 {
     align-self: center;
     justify-self: center;
     float: right;
-    padding: 30px, 5px;
+    padding: 30px;
 }
 
 #byline{
